# buildsys-hw

./: .gitmodules
hw-1/: CMakeLists.txt  readme.md
hw-1/A/: CMakeLists.txt  preparing.py
hw-1/B/: CMakeLists.txt  lib.cpp  lib.h
hw-1/C/: CMakeLists.txt  main.cpp  main.h  test.cpp
hw-2/: Vagrantfile  provision.sh
hw-3/: ArmToolchain.cmake  CMakeLists.txt  readme.md
hw-3/src/: CMakeLists.txt
